--- a/arch/arm/configs/saber7100_defconfig
+++ b/arch/arm/configs/saber7100_defconfig
@@ -1,10 +1,6 @@
 #
 # Automatically generated make config: don't edit
-<<<<<<< HEAD:arch/arm/configs/soap_defconfig
-# Linux/arm 3.0.64-SOAP_Kernel_01 Kernel Configuration
-=======
-# Linux/arm 3.0.74-SaberKernel_19 Kernel Configuration
->>>>>>> 069263c... Saber Config:arch/arm/configs/saber_defconfig
+# Linux/arm 3.0.74-SaberKernel_Spr Kernel Configuration
 #
 CONFIG_ARM=y
 CONFIG_HAVE_PWM=y
@@ -40,15 +36,9 @@ CONFIG_HAVE_IRQ_WORK=y
 #
 CONFIG_EXPERIMENTAL=y
 CONFIG_INIT_ENV_ARG_LIMIT=32
-<<<<<<< HEAD:arch/arm/configs/soap_defconfig
-CONFIG_CROSS_COMPILE=""
-CONFIG_LOCALVERSION="-CM"
-CONFIG_LOCALVERSION_AUTO=y
-=======
 CONFIG_CROSS_COMPILE="/usr/local/arm/arm-eabi-4.4.3/bin/arm-eabi-"
 CONFIG_LOCALVERSION=""
-# CONFIG_LOCALVERSION_AUTO is not set
->>>>>>> 069263c... Saber Config:arch/arm/configs/saber_defconfig
+CONFIG_LOCALVERSION_AUTO=y
 CONFIG_HAVE_KERNEL_GZIP=y
 CONFIG_HAVE_KERNEL_LZMA=y
 CONFIG_HAVE_KERNEL_LZO=y
@@ -151,8 +141,10 @@ CONFIG_VM_EVENT_COUNTERS=y
 CONFIG_COMPAT_BRK=y
 # CONFIG_SLAB is not set
 CONFIG_SLUB=y
+# CONFIG_SLQB is not set
 # CONFIG_SLOB is not set
 # CONFIG_PROFILING is not set
+CONFIG_TRACEPOINTS=y
 CONFIG_HAVE_OPROFILE=y
 # CONFIG_KPROBES is not set
 CONFIG_HAVE_KPROBES=y
@@ -187,7 +179,7 @@ CONFIG_LBDAF=y
 #
 CONFIG_IOSCHED_NOOP=y
 CONFIG_IOSCHED_DEADLINE=y
-# CONFIG_IOSCHED_ROW is not set
+CONFIG_IOSCHED_ROW=y
 CONFIG_IOSCHED_CFQ=y
 CONFIG_IOSCHED_SIO=y
 CONFIG_IOSCHED_ZEN=y
@@ -195,6 +187,7 @@ CONFIG_IOSCHED_VR=y
 CONFIG_IOSCHED_BFQ=y
 CONFIG_CGROUP_BFQIO=y
 # CONFIG_DEFAULT_DEADLINE is not set
+# CONFIG_DEFAULT_ROW is not set
 CONFIG_DEFAULT_CFQ=y
 # CONFIG_DEFAULT_BFQ is not set
 # CONFIG_DEFAULT_SIO is not set
@@ -303,7 +296,6 @@ CONFIG_S3C_ADDR_BASE=0xFC000000
 #
 # Boot options
 #
-# CONFIG_S3C_BOOT_WATCHDOG is not set
 # CONFIG_S3C_BOOT_ERROR_RESET is not set
 CONFIG_S3C_BOOT_UART_FORCE_FIFO=y
 CONFIG_S3C_LOWLEVEL_UART_PORT=2
@@ -436,9 +428,11 @@ CONFIG_BUSFREQ_QOS_NONE=y
 # CONFIG_BUSFREQ_DEBUG is not set
 # CONFIG_BUSFREQ_L2_160M is not set
 CONFIG_SEC_THERMISTOR=y
+# CONFIG_SEC_SUBTHERMISTOR is not set
 # CONFIG_EXYNOS_SYSREG_PM is not set
 CONFIG_ANDROID_WIP=y
-# CONFIG_COMPACTION_RETRY is not set
+CONFIG_COMPACTION_RETRY=y
+# CONFIG_COMPACTION_RETRY_DEBUG is not set
 
 #
 # EXYNOS4 Machines
@@ -464,14 +458,13 @@ CONFIG_TARGET_LOCALE_EUR=y
 # CONFIG_TARGET_LOCALE_JPN is not set
 # CONFIG_TARGET_LOCALE_CHN is not set
 # CONFIG_TARGET_LOCALE_USA is not set
-CONFIG_MACH_T0_LTE=y
 # CONFIG_MACH_T0_USA_ATT is not set
 # CONFIG_MACH_T0_USA_TMO is not set
 # CONFIG_MACH_T0_USA_VZW is not set
 # CONFIG_MACH_T0_USA_SPR is not set
 # CONFIG_MACH_T0_USA_USCC is not set
-CONFIG_MACH_T0_EUR_LTE=y
-# CONFIG_MACH_T0_EUR_OPEN is not set
+# CONFIG_MACH_T0_EUR_LTE is not set
+CONFIG_MACH_T0_EUR_OPEN=y
 # CONFIG_MACH_T0_KOR_SKT is not set
 # CONFIG_MACH_T0_KOR_KT is not set
 # CONFIG_MACH_T0_KOR_LGT is not set
@@ -555,7 +548,29 @@ CONFIG_SEC_DEBUG_USER=y
 CONFIG_SEC_LOG=y
 CONFIG_SEC_LOG_NONCACHED=y
 CONFIG_SEC_LOG_LAST_KMSG=y
-# CONFIG_EHCI_IRQ_DISTRIBUTION is not set
+CONFIG_EHCI_IRQ_DISTRIBUTION=y
+
+#
+# Samsung Modem Feature
+#
+# CONFIG_LTE_VIA_SWITCH is not set
+# CONFIG_SEC_DUAL_MODEM_MODE is not set
+# CONFIG_SEC_MODEM_M0_C2C is not set
+CONFIG_SEC_MODEM_M0=y
+# CONFIG_SEC_MODEM_M0_CTC is not set
+# CONFIG_SEC_MODEM_T0_CU_DUOS is not set
+# CONFIG_SEC_MODEM_T0_OPEN_DUOS is not set
+# CONFIG_SEC_MODEM_M0_GRANDECTC is not set
+# CONFIG_SEC_MODEM_M1 is not set
+# CONFIG_SEC_MODEM_C1 is not set
+# CONFIG_SEC_MODEM_C1_LGT is not set
+# CONFIG_SEC_MODEM_M2 is not set
+# CONFIG_SEC_MODEM_U1 is not set
+# CONFIG_SEC_MODEM_U1_LGT is not set
+# CONFIG_SEC_MODEM_GAIA is not set
+# CONFIG_SEC_MODEM_IRON is not set
+# CONFIG_SEC_MODEM_P8LTE is not set
+# CONFIG_SEC_MODEM_T0_TD_DUAL is not set
 # CONFIG_BT_CSR8811 is not set
 # CONFIG_BT_BCM4330 is not set
 CONFIG_BT_BCM4334=y
@@ -565,21 +580,16 @@ CONFIG_BT_MGMT=y
 #
 # Qualcomm Modem Feature
 #
-CONFIG_QC_MODEM=y
-CONFIG_MSM_SUBSYSTEM_RESTART=y
-CONFIG_QC_MODEM_MDM9X15=y
-CONFIG_MDM_HSIC_PM=y
+# CONFIG_QC_MODEM is not set
+# CONFIG_MSM_SUBSYSTEM_RESTART is not set
+# CONFIG_QC_MODEM_MDM9X15 is not set
+# CONFIG_MDM_HSIC_PM is not set
 # CONFIG_EMI_ERROR_RECOVERY is not set
-CONFIG_QC_MODEM_M3=y
 CONFIG_USB_CDFS_SUPPORT=y
 CONFIG_SAMSUNG_PRODUCT_SHIP=y
 # CONFIG_CORESIGHT_ETM is not set
-<<<<<<< HEAD:arch/arm/configs/soap_defconfig
-=======
-# CONFIG_CPU_FREQ_TETHERING is not set
 CONFIG_RQ_STATS=y
 CONFIG_INTELLI_PLUG=y
->>>>>>> 069263c... Saber Config:arch/arm/configs/saber_defconfig
 
 #
 # Processor Type
@@ -695,7 +705,8 @@ CONFIG_CMA=y
 # CONFIG_CMA_DEVELOPEMENT is not set
 CONFIG_CMA_BEST_FIT=y
 # CONFIG_DEBUG_VMALLOC is not set
-CONFIG_FORCE_MAX_ZONEORDER=11
+# CONFIG_LOWMEM_CHECK is not set
+CONFIG_FORCE_MAX_ZONEORDER=12
 CONFIG_ALIGNMENT_TRAP=y
 # CONFIG_UACCESS_WITH_MEMCPY is not set
 # CONFIG_SECCOMP is not set
@@ -742,7 +753,7 @@ CONFIG_CPU_FREQ_STAT=y
 # CONFIG_CPU_FREQ_DEFAULT_GOV_INTERACTIVE is not set
 # CONFIG_CPU_FREQ_DEFAULT_GOV_ADAPTIVE is not set
 CONFIG_CPU_FREQ_DEFAULT_GOV_PEGASUSQ=y
-CONFIG_CPU_FREQ_GOV_PERFORMANCE=y
+# CONFIG_CPU_FREQ_GOV_PERFORMANCE is not set
 CONFIG_CPU_FREQ_GOV_POWERSAVE=y
 CONFIG_CPU_FREQ_GOV_USERSPACE=y
 CONFIG_CPU_FREQ_GOV_HOTPLUG=y
@@ -1123,7 +1134,7 @@ CONFIG_NET_ACT_MIRRED=y
 # CONFIG_NET_CLS_IND is not set
 CONFIG_NET_SCH_FIFO=y
 # CONFIG_DCB is not set
-CONFIG_DNS_RESOLVER=m
+# CONFIG_DNS_RESOLVER is not set
 # CONFIG_BATMAN_ADV is not set
 CONFIG_RPS=y
 CONFIG_RFS_ACCEL=y
@@ -1133,6 +1144,7 @@ CONFIG_XPS=y
 # Network testing
 #
 # CONFIG_NET_PKTGEN is not set
+# CONFIG_NET_DROP_MONITOR is not set
 # CONFIG_HAMRADIO is not set
 # CONFIG_CAN is not set
 # CONFIG_IRDA is not set
@@ -1297,7 +1309,29 @@ CONFIG_MUIC_MAX77693_SUPPORT_SMART_DOCK=y
 # CONFIG_SENSORS_LIS3_SPI is not set
 # CONFIG_SENSORS_LIS3_I2C is not set
 # CONFIG_SAMSUNG_C2C is not set
-# CONFIG_SEC_MODEM is not set
+CONFIG_SEC_MODEM=y
+# CONFIG_UMTS_MODEM_XMM6260 is not set
+CONFIG_UMTS_MODEM_XMM6262=y
+# CONFIG_CDMA_MODEM_CBP71 is not set
+# CONFIG_CDMA_MODEM_CBP72 is not set
+# CONFIG_LTE_MODEM_CMC221 is not set
+# CONFIG_CDMA_MODEM_MDM6600 is not set
+# CONFIG_TDSCDMA_MODEM_SPRD8803 is not set
+# CONFIG_GSM_MODEM_ESC6270 is not set
+# CONFIG_LINK_DEVICE_MIPI is not set
+# CONFIG_LINK_DEVICE_DPRAM is not set
+# CONFIG_LINK_DEVICE_PLD is not set
+# CONFIG_LINK_DEVICE_USB is not set
+CONFIG_LINK_DEVICE_HSIC=y
+# CONFIG_LINK_DEVICE_C2C is not set
+# CONFIG_LINK_DEVICE_SPI is not set
+# CONFIG_WORKQUEUE_FRONT is not set
+# CONFIG_IPC_CMC22x_OLD_RFS is not set
+# CONFIG_SIPC_VER_5 is not set
+# CONFIG_SIM_DETECT is not set
+# CONFIG_SIM_SLOT_SWITCH is not set
+# CONFIG_LTE_MODEM_CMC220 is not set
+# CONFIG_INTERNAL_MODEM_IF is not set
 CONFIG_TOUCH_WAKE=y
 CONFIG_HAVE_IDE=y
 # CONFIG_IDE is not set
@@ -1368,7 +1402,7 @@ CONFIG_NETDEVICES=y
 # CONFIG_EQUALIZER is not set
 CONFIG_TUN=y
 # CONFIG_VETH is not set
-CONFIG_MII=y
+# CONFIG_MII is not set
 # CONFIG_PHYLIB is not set
 # CONFIG_NET_ETHERNET is not set
 CONFIG_NETDEV_1000=y
@@ -1390,6 +1424,7 @@ CONFIG_WLAN_REGION_CODE=100
 # CONFIG_IWM is not set
 # CONFIG_LIBERTAS is not set
 # CONFIG_MWIFIEX is not set
+# CONFIG_LGUIWLAN is not set
 
 #
 # Enable WiMAX (Networking options) to see the WiMAX drivers
@@ -1402,36 +1437,10 @@ CONFIG_WLAN_REGION_CODE=100
 # CONFIG_USB_KAWETH is not set
 # CONFIG_USB_PEGASUS is not set
 # CONFIG_USB_RTL8150 is not set
-CONFIG_USB_USBNET=y
-CONFIG_USB_NET_AX8817X=y
-CONFIG_USB_NET_CDCETHER=y
-# CONFIG_USB_NET_CDC_EEM is not set
-CONFIG_USB_NET_CDC_NCM=y
-# CONFIG_USB_NET_DM9601 is not set
-# CONFIG_USB_NET_SMSC75XX is not set
-# CONFIG_USB_NET_SMSC95XX is not set
-# CONFIG_USB_NET_GL620A is not set
-CONFIG_USB_NET_NET1080=y
-# CONFIG_USB_NET_PLUSB is not set
-# CONFIG_USB_NET_MCS7830 is not set
-# CONFIG_USB_NET_RNDIS_HOST is not set
-CONFIG_USB_NET_CDC_SUBSET=y
-# CONFIG_USB_ALI_M5632 is not set
-# CONFIG_USB_AN2720 is not set
-CONFIG_USB_BELKIN=y
-CONFIG_USB_ARMLINUX=y
-# CONFIG_USB_EPSON2888 is not set
-# CONFIG_USB_KC2190 is not set
-CONFIG_USB_NET_ZAURUS=y
-# CONFIG_USB_NET_CX82310_ETH is not set
-# CONFIG_USB_NET_KALMIA is not set
+# CONFIG_USB_USBNET is not set
 # CONFIG_USB_HSO is not set
-# CONFIG_USB_NET_INT51X1 is not set
 # CONFIG_USB_CDC_PHONET is not set
 # CONFIG_USB_IPHETH is not set
-# CONFIG_USB_SIERRA_NET is not set
-# CONFIG_USB_VL600 is not set
-CONFIG_MSM_RMNET_USB=y
 # CONFIG_WAN is not set
 
 #
@@ -1645,12 +1654,11 @@ CONFIG_SERIAL_CORE_CONSOLE=y
 #
 # Diag Support
 #
-CONFIG_DIAG_CHAR=y
+# CONFIG_DIAG_CHAR is not set
 
 #
 # DIAG traffic over USB
 #
-CONFIG_DIAG_OVER_USB=y
 
 #
 # SDIO support for DIAG
@@ -1659,7 +1667,6 @@ CONFIG_DIAG_OVER_USB=y
 #
 # HSIC support for DIAG
 #
-CONFIG_DIAG_HSIC_PIPE=y
 # CONFIG_TTY_PRINTK is not set
 # CONFIG_HVC_DCC is not set
 # CONFIG_IPMI_HANDLER is not set
@@ -1839,7 +1846,7 @@ CONFIG_WATCHDOG=y
 #
 # CONFIG_SOFT_WATCHDOG is not set
 CONFIG_HAVE_S3C2410_WATCHDOG=y
-CONFIG_S3C2410_WATCHDOG=y
+# CONFIG_S3C2410_WATCHDOG is not set
 # CONFIG_MAX63XX_WATCHDOG is not set
 
 #
@@ -2149,8 +2156,10 @@ CONFIG_MALI_OSMEM_ONLY=y
 # CONFIG_MALI_DED_OSMEM is not set
 # CONFIG_MALI_R3P1_LSI is not set
 # CONFIG_VIDEO_MALI400MP_DEBUG is not set
+# CONFIG_VIDEO_MALI400MP_STREAMLINE_PROFILING is not set
 CONFIG_VIDEO_MALI400MP_DVFS=y
 CONFIG_VIDEO_UMP=y
+# CONFIG_UMP_R3P1_LSI is not set
 # CONFIG_UMP_DED_ONLY is not set
 CONFIG_UMP_OSMEM_ONLY=y
 # CONFIG_UMP_VCM_ONLY is not set
@@ -2245,8 +2254,6 @@ CONFIG_FB_S5P_SPLASH_SCREEN=y
 # CONFIG_FB_S5P_LCD_INIT is not set
 # CONFIG_FB_S5P_DEBUG is not set
 CONFIG_FB_S5P_VSYNC_THREAD=y
-# CONFIG_FB_S5P_VSYNC_SEND_UEVENTS is not set
-CONFIG_FB_S5P_VSYNC_SYSFS=y
 # CONFIG_FB_S5P_TRACE_UNDERRUN is not set
 CONFIG_FB_S5P_DEFAULT_WINDOW=2
 CONFIG_FB_S5P_NR_BUFFERS=2
@@ -2361,21 +2368,20 @@ CONFIG_AUDIO_SAMSUNG_MEMSIZE_SRP=1024
 # CONFIG_SND_USE_STEREO_SPEAKER is not set
 CONFIG_SND_USE_LINEOUT_SWITCH=y
 # CONFIG_SND_USE_MUIC_SWITCH is not set
-CONFIG_SND_SOC_I2C_AND_SPI=y
-# CONFIG_SND_SOC_ALL_CODECS is not set
-CONFIG_SND_SOC_WM_HUBS=y
-CONFIG_SND_SOC_WM8994=y
 CONFIG_SND_CONFIG_SND_VOODOO=y
 CONFIG_SND_VOODOO_HP_LEVEL_CONTROL=y
 CONFIG_SND_VOODOO_HP_LEVEL=57
 # CONFIG_SND_VOODOO_RECORD_PRESETS is not set
 # CONFIG_SND_VOODOO_DEVELOPMENT is not set
+CONFIG_SND_SOC_I2C_AND_SPI=y
+# CONFIG_SND_SOC_ALL_CODECS is not set
+CONFIG_SND_SOC_WM_HUBS=y
+CONFIG_SND_SOC_WM8994=y
 CONFIG_SND_SOC_USE_EXTERNAL_MIC_BIAS=y
 # CONFIG_SOUND_PRIME is not set
 CONFIG_HID_SUPPORT=y
 CONFIG_HID=y
 # CONFIG_HIDRAW is not set
-CONFIG_UHID=y
 
 #
 # USB Input Devices
@@ -2578,7 +2584,7 @@ CONFIG_USB_SERIAL=y
 CONFIG_USB_SERIAL_PL2303=y
 # CONFIG_USB_SERIAL_OTI6858 is not set
 # CONFIG_USB_SERIAL_QCAUX is not set
-CONFIG_USB_SERIAL_QUALCOMM=y
+# CONFIG_USB_SERIAL_QUALCOMM is not set
 # CONFIG_USB_SERIAL_SPCP8X5 is not set
 # CONFIG_USB_SERIAL_HP4X is not set
 # CONFIG_USB_SERIAL_SAFE is not set
@@ -2588,14 +2594,13 @@ CONFIG_USB_SERIAL_QUALCOMM=y
 # CONFIG_USB_SERIAL_TI is not set
 # CONFIG_USB_SERIAL_CYBERJACK is not set
 # CONFIG_USB_SERIAL_XIRCOM is not set
-CONFIG_USB_SERIAL_WWAN=y
 # CONFIG_USB_SERIAL_OPTION is not set
 # CONFIG_USB_SERIAL_OMNINET is not set
 # CONFIG_USB_SERIAL_OPTICON is not set
 # CONFIG_USB_SERIAL_VIVOPAY_SERIAL is not set
 # CONFIG_USB_SERIAL_ZIO is not set
 # CONFIG_USB_SERIAL_SSU100 is not set
-# CONFIG_USB_SERIAL_CSVT is not set
+CONFIG_USB_SERIAL_CSVT=y
 # CONFIG_USB_SERIAL_DEBUG is not set
 
 #
@@ -2621,9 +2626,8 @@ CONFIG_USB_SERIAL_WWAN=y
 # CONFIG_USB_TEST is not set
 # CONFIG_USB_ISIGHTFW is not set
 # CONFIG_USB_YUREX is not set
-CONFIG_USB_QCOM_DIAG_BRIDGE=y
-# CONFIG_USB_QCOM_DIAG_BRIDGE_TEST is not set
-CONFIG_USB_QCOM_MDM_BRIDGE=y
+# CONFIG_USB_QCOM_DIAG_BRIDGE is not set
+# CONFIG_USB_QCOM_MDM_BRIDGE is not set
 CONFIG_USB_GADGET=y
 # CONFIG_USB_GADGET_DEBUG_FILES is not set
 # CONFIG_USB_GADGET_DEBUG_FS is not set
@@ -2654,8 +2658,8 @@ CONFIG_USB_GADGET_DUALSPEED=y
 # CONFIG_USB_G_PRINTER is not set
 # CONFIG_USB_G_SLP is not set
 CONFIG_USB_G_ANDROID=y
-# CONFIG_USB_ANDROID_SAMSUNG_COMPOSITE is not set
-# CONFIG_USB_ANDROID_SAMSUNG_MTP is not set
+CONFIG_USB_ANDROID_SAMSUNG_COMPOSITE=y
+CONFIG_USB_ANDROID_SAMSUNG_MTP=y
 CONFIG_USB_DUN_SUPPORT=y
 # CONFIG_USB_ANDROID is not set
 # CONFIG_USB_CDC_COMPOSITE is not set
@@ -2691,6 +2695,7 @@ CONFIG_MMC_BLOCK_BOUNCE=y
 # CONFIG_SDIO_UART is not set
 # CONFIG_MMC_TEST is not set
 CONFIG_MMC_SELECTIVE_PACKED_CMD_POLICY=y
+# CONFIG_MMC_CPRM is not set
 
 #
 # MMC/SD/SDIO Host Controller Drivers
@@ -2728,7 +2733,7 @@ CONFIG_LEDS_AN30259A=y
 # CONFIG_LEDS_MAX8997 is not set
 # CONFIG_LEDS_BD2802 is not set
 # CONFIG_LEDS_LT3593 is not set
-# CONFIG_LEDS_SWITCH is not set
+CONFIG_LEDS_SWITCH=y
 CONFIG_LEDS_MAX77693=y
 # CONFIG_LEDS_AAT1290A is not set
 # CONFIG_LEDS_TRIGGERS is not set
@@ -2883,7 +2888,9 @@ CONFIG_CLKDEV_LOOKUP=y
 CONFIG_VIBETONZ=y
 CONFIG_MOTOR_DRV_MAX77693=y
 # CONFIG_MOTOR_DRV_ISA1200 is not set
-# CONFIG_FM_RADIO is not set
+CONFIG_FM_RADIO=y
+# CONFIG_FM_SI4709 is not set
+CONFIG_FM_SI4705=y
 # CONFIG_SENSORS_CORE is not set
 CONFIG_SENSORS_SYSFS=y
 CONFIG_SENSORS_SSP=y
@@ -2913,7 +2920,7 @@ CONFIG_MOBICORE_SUPPORT=y
 CONFIG_MOBICORE_API=y
 CONFIG_IOMMU_SUPPORT=y
 # CONFIG_FELICA is not set
-CONFIG_AUTHENTEC_VPNCLIENT_INTERCEPTOR=m
+# CONFIG_AUTHENTEC_VPNCLIENT_INTERCEPTOR is not set
 
 #
 # File systems
@@ -3002,23 +3009,7 @@ CONFIG_WTL_ENCRYPTION_FILTER=y
 # CONFIG_PSTORE is not set
 # CONFIG_SYSV_FS is not set
 # CONFIG_UFS_FS is not set
-CONFIG_NETWORK_FILESYSTEMS=y
-# CONFIG_NFS_FS is not set
-# CONFIG_NFSD is not set
-# CONFIG_CEPH_FS is not set
-CONFIG_CIFS=m
-CONFIG_CIFS_STATS=y
-CONFIG_CIFS_STATS2=y
-CONFIG_CIFS_WEAK_PW_HASH=y
-CONFIG_CIFS_UPCALL=y
-CONFIG_CIFS_XATTR=y
-CONFIG_CIFS_POSIX=y
-# CONFIG_CIFS_DEBUG2 is not set
-CONFIG_CIFS_DFS_UPCALL=y
-CONFIG_CIFS_ACL=y
-# CONFIG_NCP_FS is not set
-# CONFIG_CODA_FS is not set
-# CONFIG_AFS_FS is not set
+# CONFIG_NETWORK_FILESYSTEMS is not set
 
 #
 # Partition Types
@@ -3111,13 +3102,36 @@ CONFIG_RCU_CPU_STALL_TIMEOUT=60
 CONFIG_RCU_CPU_STALL_VERBOSE=y
 CONFIG_LKDTM=y
 CONFIG_SYSCTL_SYSCALL_CHECK=y
+CONFIG_NOP_TRACER=y
 CONFIG_HAVE_FUNCTION_TRACER=y
 CONFIG_HAVE_FUNCTION_GRAPH_TRACER=y
 CONFIG_HAVE_DYNAMIC_FTRACE=y
 CONFIG_HAVE_FTRACE_MCOUNT_RECORD=y
 CONFIG_HAVE_C_RECORDMCOUNT=y
+CONFIG_TRACER_MAX_TRACE=y
+CONFIG_RING_BUFFER=y
+CONFIG_EVENT_TRACING=y
+CONFIG_EVENT_POWER_TRACING_DEPRECATED=y
+CONFIG_CONTEXT_SWITCH_TRACER=y
+CONFIG_TRACING=y
+CONFIG_GENERIC_TRACER=y
 CONFIG_TRACING_SUPPORT=y
-# CONFIG_FTRACE is not set
+CONFIG_FTRACE=y
+CONFIG_FUNCTION_TRACER=y
+CONFIG_FUNCTION_GRAPH_TRACER=y
+# CONFIG_IRQSOFF_TRACER is not set
+# CONFIG_PREEMPT_TRACER is not set
+CONFIG_SCHED_TRACER=y
+CONFIG_BRANCH_PROFILE_NONE=y
+# CONFIG_PROFILE_ANNOTATED_BRANCHES is not set
+# CONFIG_PROFILE_ALL_BRANCHES is not set
+# CONFIG_STACK_TRACER is not set
+# CONFIG_BLK_DEV_IO_TRACE is not set
+CONFIG_DYNAMIC_FTRACE=y
+CONFIG_FUNCTION_PROFILER=y
+CONFIG_FTRACE_MCOUNT_RECORD=y
+# CONFIG_FTRACE_STARTUP_TEST is not set
+# CONFIG_RING_BUFFER_BENCHMARK is not set
 # CONFIG_DYNAMIC_DEBUG is not set
 # CONFIG_DMA_API_DEBUG is not set
 # CONFIG_ATOMIC64_SELFTEST is not set
@@ -3126,6 +3140,7 @@ CONFIG_HAVE_ARCH_KGDB=y
 # CONFIG_TEST_KSTRTOX is not set
 # CONFIG_STRICT_DEVMEM is not set
 # CONFIG_ARM_UNWIND is not set
+CONFIG_OLD_MCOUNT=y
 CONFIG_DEBUG_USER=y
 # CONFIG_OC_ETM is not set
 CONFIG_DEBUG_S3C_UART=2
@@ -3198,7 +3213,7 @@ CONFIG_CRYPTO_HMAC=y
 #
 CONFIG_CRYPTO_CRC32C=y
 # CONFIG_CRYPTO_GHASH is not set
-CONFIG_CRYPTO_MD4=m
+# CONFIG_CRYPTO_MD4 is not set
 CONFIG_CRYPTO_MD5=y
 # CONFIG_CRYPTO_MICHAEL_MIC is not set
 # CONFIG_CRYPTO_RMD128 is not set
@@ -3246,7 +3261,7 @@ CONFIG_CRYPTO_DEFLATE=y
 # CONFIG_CRYPTO_USER_API_SKCIPHER is not set
 CONFIG_CRYPTO_HW=y
 # CONFIG_CRYPTO_S5P_DEV_ACE is not set
-# CONFIG_BINARY_PRINTF is not set
+CONFIG_BINARY_PRINTF=y
 
 #
 # Library routines
